<resources>
    <string name="app_name">TimeTracking</string>
    <string name="settings">Settings</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="break_time">Break</string>
    <string name="name">Name</string>
    <string name="error_remove_track_view">You can\'t remove this</string>
    <string name="set_start_time">Start time: %1$s:%2$s</string>
    <string name="set_end_time">End time: %1$s:%2$s</string>
    <string name="addtimetrack_menu_save">Save</string>
    <string name="default_error">Somethings is going wrong. Please try again later</string>
    <string name="save_progress_title">Save work</string>
    <string name="save_progress_message">Please wait. We will safe your work.</string>
    <string name="error_calendar_list">Something is going wrong</string>
    <string name="work_hour_sum">Work time: %.2fh</string>
    <string name="addtimetrack_menu_delete">Delete</string>
    <string name="delete_progress_title">Delete work</string>
    <string name="delete_progress_message">Please wait. We will delete your work.</string>
    <string name="save_your_default_time">Save your time…</string>
    <string name="preference_default_working_hours">Default working hours</string>
    <string name="save">Save</string>
    <string name="preference_category_general">General</string>
    <string name="addtimetrack_menu_vacation">Vacation</string>
    <string name="addtimetrack_menu_illness">Illness</string>
    <string name="illnes_progress_title">Setup illness</string>
    <string name="illness_progress_message">Please wait. We will setup your illness work.</string>
    <string name="vacation_progress_title">Setup vacation</string>
    <string name="vacation_progress_message">Please wait. We will setup your vacation work.</string>
    <string name="username">Username</string>
    <string name="create_user">Create User</string>
    <string name="create_user_already_exist">User already exist</string>
    <string name="have_account">Already have a Account?</string>
    <string name="token">Token</string>
    <string name="login">Login</string>
    <string name="introducing">Hello %1$s,\n\nThis is your user token. It\'s very important to save it on a safe place. \n\n<b>Caution: </b>This is your \"password\" too. If you want to login on a other device you can use this token.</string>
    <string name="welcome">Welcome</string>
    <string name="ok">OK</string>
</resources>
