<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:hint="@string/name"
                android:inputType="text"
                android:lines="1"
                android:maxWidth="120dp"
                tools:ignore="RelativeOverlap"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:srcCompat="@drawable/ic_close_gray_24dp"
                tools:ignore="ContentDescription"/>

        </FrameLayout>

        <TextView
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target"
            android:hint="@string/start_time"/>

        <TextView
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target"
            android:layout_marginTop="@dimen/small"
            android:hint="@string/end_time"/>
    </LinearLayout>
</merge>