<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="guru.stefma.timetracking.onboarding.CreateUserHandler"/>
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:minWidth="200dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    app:addTextChangedListener="@{handler.mUsernameChangedListener}"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/normal"
                android:onClick="@{handler.onCreateUserClick}"
                android:text="@string/create_user"/>

        </LinearLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/normal"
            android:layout_marginEnd="@dimen/normal"
            android:onClick="@{handler.onAlreadyHaveAccountClick}"
            android:text="@string/have_account"/>

    </RelativeLayout>
</layout>