<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="welcome"
            type="guru.stefma.timetracking.onboarding.Welcome"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/monster"
            android:layout_marginTop="@dimen/big"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>

        <TextView
            android:id="@+id/token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginEnd="@dimen/monster"
            android:layout_marginStart="@dimen/monster"
            android:text="@{welcome.token}"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textIsSelectable="true"
            tools:text="12891280192918289129"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/token"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/monster"
            android:layout_marginEnd="@dimen/monster"
            android:layout_marginStart="@dimen/monster"
            android:layout_marginTop="@dimen/normal"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small"
                    android:text="@{@string/introducing(welcome.username)}"
                    tools:text="@string/introducing"/>
            </ScrollView>

        </android.support.v7.widget.CardView>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="@dimen/monster"
            android:layout_alignParentBottom="true"
            android:elevation="4dp"
            android:gravity="end|center_vertical"
            android:onClick="@{welcome.onOkClicked}"
            android:paddingEnd="@dimen/big"
            android:paddingStart="@dimen/big"
            android:text="@string/ok"/>

    </RelativeLayout>
</layout>
